--- a/index.html
+++ b/index.html
@@ -3,26 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>TicTacToe</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+          integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="css\style.css">
 </head>
 <body>
-    <div class="board">
-        <div class="box fa" data-row="0" data-column="0"></div>
-        <div class="box fa" data-row="0" data-column="1"></div>
-        <div class="box fa" data-row="0" data-column="2"></div>
-        <div class="box fa" data-row="1" data-column="0"></div>
-        <div class="box fa" data-row="1" data-column="1"></div>
-        <div class="box fa" data-row="1" data-column="2"></div>
-        <div class="box fa" data-row="2" data-column="0"></div>
-        <div class="box fa" data-row="2" data-column="1"></div>
-        <div class="box fa" data-row="2" data-column="2"></div>
-    </div>
-    <button class="reset-button">Reset Game</button>
+<div class="board">
+    <div class="box fa" data-row="0" data-column="0"></div>
+    <div class="box fa" data-row="0" data-column="1"></div>
+    <div class="box fa" data-row="0" data-column="2"></div>
+    <div class="box fa" data-row="1" data-column="0"></div>
+    <div class="box fa" data-row="1" data-column="1"></div>
+    <div class="box fa" data-row="1" data-column="2"></div>
+    <div class="box fa" data-row="2" data-column="0"></div>
+    <div class="box fa" data-row="2" data-column="1"></div>
+    <div class="box fa" data-row="2" data-column="2"></div>
+</div>
+<button class="reset-button">Reset Game</button>
+<div>
+    <label class="winner">Let's play the game!</label>
+</div>
+    <label class="result">Circle 0:0 Cross</label>
 
+<script src="js/main.js">
 
-    <script src="js/main.js">
-
-    </script>
+</script>
 </body>
 </html>
