added draw logic and update label display with result

--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
     <link rel="stylesheet" href="css\style.css">
 </head>
 <body>
-<div class="board">
-    <div class="box fa" data-row="0" data-column="0"></div>
-    <div class="box fa" data-row="0" data-column="1"></div>
-    <div class="box fa" data-row="0" data-column="2"></div>
-    <div class="box fa" data-row="1" data-column="0"></div>
-    <div class="box fa" data-row="1" data-column="1"></div>
-    <div class="box fa" data-row="1" data-column="2"></div>
-    <div class="box fa" data-row="2" data-column="0"></div>
-    <div class="box fa" data-row="2" data-column="1"></div>
-    <div class="box fa" data-row="2" data-column="2"></div>
-</div>
-<button class="reset-button">Reset Game</button>
-<div>
-    <label class="winner">Let's play the game!</label>
-</div>
-    <label class="result">Circle 0:0 Cross</label>
+    <div class="board">
+        <div class="box fa" data-row="0" data-column="0"></div>
+        <div class="box fa" data-row="0" data-column="1"></div>
+        <div class="box fa" data-row="0" data-column="2"></div>
+        <div class="box fa" data-row="1" data-column="0"></div>
+        <div class="box fa" data-row="1" data-column="1"></div>
+        <div class="box fa" data-row="1" data-column="2"></div>
+        <div class="box fa" data-row="2" data-column="0"></div>
+        <div class="box fa" data-row="2" data-column="1"></div>
+        <div class="box fa" data-row="2" data-column="2"></div>
+    </div>
+    <button class="reset-button">Reset Game</button>
+    <div>
+        <label class="winner">Let's play the game!</label>
+    </div>
+    <label id ="result">Circle 0:0 Cross</label>
 
 <script src="js/main.js">
 
